refactor(routes): Reduced duplicated code by using middleware
Moved jwt_authorization for id based routes to the root of the resource instead of at each route endpoint
