# routes/customer_accounts/customer_accounts.js
@@ -1,14 +1,8 @@
 const express = require('express');
-const router = express.Router();
+const router = express.Router({ mergeParams: true });
 const validation_helper = require('../../lib/helpers/validation.helper');
 const customer_account_service = require('../../lib/services/customer_account_service');
-const jwt_authorization = require("../../lib/jwt_authorization");
-const notes_service = require('../../lib/services/notes_service');
-
-router.use(jwt_authorization.middleware({
-    audience: process.env.AUDIENCE,
-    issuer: [process.env.CUSTOMER_ISSUER, process.env.INTERNAL_ISSUER]
-}));
+const service_account_service = require('../../lib/services/service_account_service');
 
 const format_customer_response = function (user, customer_account) {
     if (user) {
@@ -33,8 +27,7 @@ const format_customer_response = function (user, customer_account) {
     }
 };
 
-router.get('/:id',
-    jwt_authorization.verify_claims_from_request_property('Customer_Account_Id', 'params.id'),
+router.get('/',
     async function (req, res, next) {
         try {
             let customer_account = await customer_account_service.get_by_id(req.params.id);
@@ -50,8 +43,7 @@ router.get('/:id',
         }
     });
 
-router.patch('/:id',
-    jwt_authorization.verify_claims_from_request_property('Customer_Account_Id', 'params.id'),
+router.patch('/',
     validation_helper.validation_middleware('customer_account_patch'),
     async function (req, res, next) {
         try {
@@ -68,53 +60,16 @@ router.patch('/:id',
         }
     });
 
-router.post('/:id/notes',
-    jwt_authorization.verify_claims_from_request_property('Customer_Account_Id', 'params.id'),
-    validation_helper.validation_middleware('customer_account_add_note_request'),
+router.use('/notes', require('./customer_accounts.notes'));
+
+router.use('/notification_options', require('./customer_accounts.notification_options'));
+
+router.use('/pay_methods', require('./customer_accounts.pay_methods'));
+
+router.get('/service_accounts',
     async function (req, res, next) {
         try {
-
-            var note_request = req.customer_account_add_note_request;
-            note_request.User = req.user.sub;
-
-            var response = await notes_service.post_customer_account_notes(req.params.id, note_request);
-            res.send(response);
-        }
-        catch (err) {
-            next(err);
-        }
-    });
-
-router.get('/:id/notes/:count?',
-    jwt_authorization.verify_claims_from_request_property('Customer_Account_Id', 'params.id'),
-    async function (req, res, next) {
-        try {
-
-            if (!req.params.count || req.params.count === '0') {
-                req.params.count = 20;
-            }
-
-            var response = await notes_service.get_customer_account_notes(req.params.id, req.params.count);
-            res.send(response);
-        }
-        catch (err) {
-            next(err);
-        }
-    });
-
-router.use('/:id/notification_options', require('./customer_accounts.notification_options'));
-
-router.use('/:id/pay_methods', require('./customer_accounts.pay_methods'));
-
-router.post('/fuzzy_search',
-    jwt_authorization.middleware({
-        audience: process.env.AUDIENCE,
-        issuer: [process.env.INTERNAL_ISSUER]
-    }),
-    validation_helper.validation_middleware('fuzzy_search_request'),
-    async function (req, res, next) {
-        try {
-            let result = await customer_account_service.post_fuzzy_search(req.body);
+            let result = await service_account_service.search({Customer_Account_Id: req.params.id});
             res.send(result);
         }
         catch (err) {
